--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,36 @@ tr:hover {
   box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2), 0 4px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.close {
+  color: #aaaaaa;
+  float: right;
+  padding: 5px;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  overflow-y: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 50%;
+}
+
 td {
   vertical-align: top;
   font-size: 15px;
@@ -28,6 +58,10 @@ td:nth-of-type(n+2) {
 
 .hidden {
   display: none;
+}
+
+.clicked {
+  background-color: red;
 }
 
 .selected {
