--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,8 @@
 tr {
   margin: 10px 0px 10px 0px;
   line-height: 25px;
-  transition: 0.3s;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  transition: 0.2s all;
 }
 
 tr:hover {
@@ -43,6 +43,7 @@ tr:hover {
 td {
   vertical-align: top;
   font-size: 15px;
+  transition: 0.2s all;
 }
 
 td:nth-of-type(n+2) {
