--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,27 @@ tr:hover {
   background-color: rgba(0, 0, 0, 0.4);
 }
 
+.chip {
+    display: inline-block;
+    border-radius: 25px;
+    padding: 2px 25px 5px 25px;
+    height: 20px;
+    margin: 2px;
+    background-color: red;
+    transition: .1s;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    color: white !important;
+}
+.chip:hover {
+    color:white !important;
+    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2), 0 4px 20px 0 rgba(0, 0, 0, 0.19);
+    background-color:#FF9800;
+}
+.failtest {
+  font-weight: bold;
+  margin: 0px;
+  padding: 0px;
+}
 .close {
   color: #aaaaaa;
   float: right;
@@ -74,12 +95,7 @@ td:nth-of-type(n+2) {
   color: white !important;
 }
 
-.failtest {
-  font-size: 15px;
-  font-weight: bold;
-  margin: 0px;
-  padding: 0px;
-}
+
 
 .commitID {
   cursor: pointer;
