--- a/css/styles.css
+++ b/css/styles.css
@@ -1,25 +1,25 @@
 tr {
-  margin: 10px 0px 10px 0px;
-  line-height: 25px;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-  transition: 0.2s all;
+    margin: 10px 0px 10px 0px;
+    line-height: 25px;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    transition: 0.2s all;
 }
 
 tr:hover {
-  box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2), 0 4px 20px 0 rgba(0, 0, 0, 0.19);
+    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2), 0 4px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  padding-top: 100px;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgb(0, 0, 0);
-  background-color: rgba(0, 0, 0, 0.4);
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
 }
 
 .chip {
@@ -33,82 +33,94 @@ tr:hover {
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
     color: white !important;
 }
+
 .chip:hover {
-    color:white !important;
+    color: white !important;
     box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2), 0 4px 20px 0 rgba(0, 0, 0, 0.19);
-    background-color:#FF9800;
+    background-color: #FF9800;
 }
+
 .failtest {
-  font-weight: bold;
-  margin: 0px;
-  padding: 0px;
+    font-weight: bold;
+    margin: 0px;
+    padding: 0px;
 }
+
 .close {
-  color: #aaaaaa;
-  float: right;
-  padding: 5px;
-  font-size: 28px;
-  font-weight: bold;
-  cursor: pointer;
+    color: #aaaaaa;
+    float: right;
+    padding: 5px;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
 }
 
 .modal-content {
-  background-color: #fefefe;
-  margin: auto;
-  overflow-y: auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 50%;
+    background-color: #fefefe;
+    margin: auto;
+    overflow-y: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 50%;
 }
 
 td {
-  vertical-align: top;
-  transition: 0.2s all;
+    vertical-align: top;
+    transition: 0.2s all;
 }
 
 td:nth-of-type(n+2) {
-  padding: 0px 4px 0px 4px;
+    min-width: 13px;
+    text-align: center;
 }
 
 .fail {
-  background-color: #FF5252;
+    background-color: #FF5252;
+}
+
+.testfails {
+    color: red;
+    box-shadow: none !important;
+}
+
+.emptytd {
+    box-shadow: none !important;
+    background-color: white !important;
 }
 
 .success {
-  background-color: #388E3C;
+    background-color: #388E3C;
 }
 
 .hidden {
-  display: none;
+    display: none;
 }
 
 .clicked {
-  background-color: red;
+    background-color: red;
 }
 
 .selected {
-  filter: brightness(125%) !important;
+    filter: brightness(125%) !important;
 }
 
 .hovered {
-  background-color: #ffb74d !important;
-  color: white !important;
+    background-color: #ffb74d !important;
+    color: white !important;
 }
 
-
-
 .commitID {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 #more {
-  cursor: auto;
+    cursor: auto;
 }
 
 #data-toggle {
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  margin: auto;
-  cursor: pointer;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    margin: auto;
+    cursor: pointer;
 }
