--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ tr:hover {
     display: none;
     position: fixed;
     z-index: 1;
-    padding-top: 100px;
+    padding-top: 200px;
     left: 0;
     top: 0;
     width: 100%;
@@ -41,6 +41,14 @@ tr:hover {
     background-color: #FF9800;
 }
 
+.testinfo{
+    margin: 0px 0px 5px 0px;
+}
+
+#testnumber{
+    font-weight: bold;
+}
+
 .failtest {
     font-weight: bold;
     margin: 0px;
@@ -60,9 +68,10 @@ tr:hover {
     background-color: #fefefe;
     margin: auto;
     overflow-y: auto;
-    padding: 20px;
+    padding: 0px 20px 20px 20px;
     border: 1px solid #888;
-    width: 50%;
+    width: 60%;
+    height: 50%;
 }
 
 td {
